applauncherd (0.23.0) unstable; urgency=low

  * Changes: Removed extra prctl(PR_SET_DUMPABLE, ...)
  * Changes: e-booster refactoring
  * Changes: removed compilation warnings
  * Fixes: NB#236033 - applauncherd does not build with gcc-4.5

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 10 Mar 2011 14:52:40 +0200

applauncherd (0.22.0) stable; urgency=low

  * Landscape splash-message implemented to protocol between invoker and launcher
  * Splash parameters communicated to mcompositor
  * Implemented: SWP#DUI-5052

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 08 Mar 2011 17:02:14 +0200


applauncherd (0.21.0) stable; urgency=low

  * Changes: Disable out of memory adjustments command line parameter added to invoker
  * Changes: AppData code refactoring 

 -- Juha Lintula <juha.lintula@nokia.com>  Fri, 08 Mar 2011 10:16:05 +0200

applauncherd (0.20.0) stable; urgency=low

  * Implemented: SWP#DUI-5045
  * Implemented: SWP#DUI-5050
  * New: Test for core dump generation with launched apps
  * Changes: add core dump test to red tests
  * New: Basic implementation of the e-booster.
  * New: Unit tests for EBooster added.
  * Changes: Indentation fixed / tabs removed from mdeclarativecache.cpp
  * Changes: e-booster tests added. Removed .launch from test applications and scripts

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 04 Mar 2011 13:59:58 +0200

applauncherd (0.19.0) stable; urgency=low
  
  * Splash command line parameters added to invoker
  * Implemented: SWP#DUI-5050
  * Fixes: NB#229983 - Applauncherd is not able to return to the boot mode
  * Fixes: NB#230055 - cores generation does not work for boosted applications

 -- Jussi Lind <jussi.lind@nokia.com>  Mon, 28 Feb 2011 13:12:59 +0200

applauncherd (0.18.4) stable; urgency=low

  * Fixes: NB#229925 - applauncherd-single-instance is missing debug symbols 

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 24 Feb 2011 12:30:42 +0200

applauncherd (0.18.3) stable; urgency=low
