@@ -2,7 +2,7 @@ Source: applauncherd
 Section: admin
 Priority: important
 Maintainer: Jussi Lind <jussi.lind@nokia.com>
-Build-Depends: cmake (>= 2.6.0), debhelper (>= 7), libqt4-dev (>= 4.5.0), libmeegotouch-dev, libcreds2-dev [arm armel], aegis-builder (>= 1.4) [arm armel], libxtst-dev, libxext-dev, libxi-dev
+Build-Depends: cmake (>= 2.6.0), debhelper (>= 7), libqt4-dev (>= 4.5.0), libmeegotouch-dev, libcreds2-dev [arm armel], aegis-builder (>= 1.4) [arm armel], libxtst-dev, libxext-dev, libxi-dev, doxygen
 Standards-Version: 3.8.0
 
 Package: applauncherd
