@@ -3,7 +3,9 @@ applauncherd (0.23.0) unstable; urgency=low
   * Changes: Removed extra prctl(PR_SET_DUMPABLE, ...)
   * Changes: e-booster refactoring
   * Changes: removed compilation warnings
+  * Changes: added user and api documentation as html in doc package
   * Fixes: NB#236033 - applauncherd does not build with gcc-4.5
+  * Fixes: NB#234213 - The documentation of QML Booster is not good
 
  -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 10 Mar 2011 14:52:40 +0200
 
